Fix spacing on recommended sources panel
The text was on a different level than the logos here, and
there was different spacing below and above each section.

--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -758,11 +758,7 @@ div.column-contents {
 }
 
 .recommend_source {
-    display: block;
-    clear: both; 
-    float: left;
-    padding: 5px 0;
-    margin: 5px 0;
+    padding: 10px 0;
     min-height: 24px;
     width: 100%;
     border-bottom: solid 1px #ccc;
@@ -770,11 +766,10 @@ div.column-contents {
 
 .source_thumb {
     float: left;
-    margin: 0 10px 0 0;
 }
 
 .source_title {
-    margin: 0 20px 0 0;
+    margin: 10px;
 }
 
 #coursefilter {
